# os-ex3

./: CMakeLists.txt  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp  actual1.txt  ex3.tar  test1_single
Atomic/: README  atomicdemo.cpp  atomicdemo_multivar.cpp
Barrier/: CMakeLists.txt 
Tests2/: test4-1_thread_4_process.cpp
ex3/: Makefile  README
